<resources>
    <string name="app_name">Demo App</string>
    <string name="login">Đăng nhập</string>
    <string name="logout">Đăng xuất</string>
    <string name="account">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="home">Trang chủ</string>
    <string name="notification">Thông báo</string>
    <string name="order">Đơn hàng</string>
    <string name="information">Thông tin cá nhân</string>
    <string name="search">Tìm kiếm</string>
    <string name="suggest_product">Sản phẩm gợi ý</string>
    <string name="rating">Đánh giá</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>